feat: Annie Beta patch Update - check changelog

--- a/TWB_Parser/App.config
+++ b/TWB_Parser/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="CSVMatchsFilename" value="match.csv"/>
+    <add key="DatabaseType" value="MySQL"/>
+    <add key="ServerAddress" value="localhost"/>
+    <add key="PortMySQL" value="3306"/>
+    <add key="DatabaseName" value="TWB"/>
+    <add key="DatabaseUsername" value="Username"/>
+    <add key="DatabasePassword" value="Password"/>
+  </appSettings>
 </configuration>
