feat: Modularity update - Check the Changelog

--- a/TWB_Parser/App.config
+++ b/TWB_Parser/App.config
@@ -11,5 +11,8 @@
     <add key="DatabaseName" value="TWB"/>
     <add key="DatabaseUsername" value="Username"/>
     <add key="DatabasePassword" value="Password"/>
+    <add key="RegionList" value="Europe;Japan + Korea;North America;Oceania;South America"/>
+    <add key="VersionList" value="Annie Patch ;Annie Patch Beta;2E+ Final;Beowulf Patch;2E+ (old UD);Eliza Patch;Fukua Patch;MDE;SDE;2E"/>
+    <add key="CharacterList" value="N:None;AN:Annie;BB:Big Band:BigBand:Band;BW:Beowulf:Beo;CE:Cerebella:Bella;DB:Double;EL:Eliza;FI:Filia;FU:Fukua;MF:Ms. Fortune:Ms.Fortune:MsFortune:MFortune;PC:Peacock;PS:Parasoul:Para;PW:Painwheel;RF:Robo-Fortune:Robo;SQ:Squigly;VA:Valentine:Val"/>
   </appSettings>
 </configuration>
